prodMetadata/src/objects/DC_Event_Contact__c.object
<CustomObject>
    <description>This relates Contact records to DC Events</description>
    <fields>
        <fullName>DC_Event__c</fullName>
        <label>DC Event</label>
        <referenceTo>DC_Event__c</referenceTo>
        <relationshipLabel>Related Contacts</relationshipLabel>
        <relationshipName>Related_DC_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes on relation to event</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related DC Events</relationshipLabel>
        <relationshipName>Related_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Testifier</fullName>
                </value>
                <value>
                    <fullName>IAVA rep</fullName>
                </value>
                <value>
                    <fullName>Coach</fullName>
                </value>
                <value>
                    <fullName>Contact made at event</fullName>
                </value>
                <value>
                    <fullName>Attendee</fullName>
                </value>
                <value>
                    <fullName>Coordinator</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contact Related to DC Event</label>
    <nameField>
        <displayFormat>DCEvCon-{00000}</displayFormat>
        <label>DC Event Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contacts Related to DC Event</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>